--- a/classification/h5a2_audio.ipynb
+++ b/classification/h5a2_audio.ipynb
@@ -162,7 +162,7 @@
     "        for idx in range(naudio):\n",
     "            featvec = myds[classname, idx]\n",
     "            X[s * nclass * naudio + class_idx * naudio + idx, :] = featvec\n",
-    "np.save(fm_dir + \"feature_matrix_2D.npy\", X)\n",
+    "# np.save(fm_dir + \"feature_matrix_2D.npy\", X)\n",
     "\n",
     "# X = np.load(fm_dir+\"feature_matrix_2D.npy\")\n",
     "\n",
@@ -723,7 +723,7 @@
     "audio3 = AudioUtil.time_shift(audio2, 0.4)\n",
     "audio4 = AudioUtil.scaling(audio2)\n",
     "audio5 = AudioUtil.add_noise(audio2, sigma=1e-2)\n",
-    "audio6 = AudioUtil.echo(audio2, 3)\n",
+    "audio6 = AudioUtil.add_echo(audio2, 3)\n",
     "audio7 = AudioUtil.add_bg(audio2, dataset)\n",
     "\n",
     "melspec = AudioUtil.melspectrogram(audio2, fs2=11025)\n",
@@ -751,6 +751,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "AudioUtil.play(audio2)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -774,7 +783,7 @@
     "        for class_idx, classname in enumerate(classnames):\n",
     "            featvec = myds[classname, idx]\n",
     "            X_aug[s * nclass * naudio + class_idx * naudio + idx, :] = featvec\n",
-    "np.save(fm_dir + \"feature_matrix_2D_aug.npy\", X_aug)\n",
+    "# np.save(fm_dir + \"feature_matrix_2D_aug.npy\", X_aug)\n",
     "\n",
     "# X_aug = np.load(fm_dir+\"feature_matrix_2D_aug.npy\")\n",
     "\n",
@@ -839,28 +848,91 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### TO COMPLETE\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pickle\n",
+    "from sklearn.gaussian_process import GaussianProcessClassifier\n",
+    "from sklearn.gaussian_process.kernels import RBF\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "# [1] Create dataset of feature vectors and split it.\n",
-    "# (optional) with data augmentation\n",
-    "myds = ...\n",
-    "# X_train, X_test, y_train, y_test = ...\n",
+    "from classification.datasets import Dataset\n",
+    "from classification.utils.audio_student import Feature_vector_DS\n",
+    "from classification.utils.plots import show_confusion_matrix\n",
+    "from classification.utils.utils import accuracy\n",
     "\n",
+    "\n",
+    "LOAD_XY = True\n",
+    "LOAD_MODEL = True\n",
+    "\n",
+    "\n",
+    "fm_dir = \"data/feature_matrices/\"  # where to save the features matrices\n",
+    "model_dir = \"../mcu/hands_on_feature_vectors/\"  # where to save the models\n",
+    "model_filename = \"model.pickle\"\n",
+    "\n",
+    "\n",
+    "# [1] Create dataset of feature vectors and split it with data augmentation\n",
+    "dataset = Dataset()\n",
+    "classnames = dataset.list_classes()\n",
+    "myds = Feature_vector_DS(dataset, Nft=512, nmel=20, duration=950, shift_pct=0.0)\n",
+    "myds.data_aug = [\"add_bg\", \"echo\", \"noise\", \"scaling\"]\n",
+    "\n",
+    "data_aug_factor = 10\n",
+    "train_pct = 0.7\n",
+    "featveclen = len(myds[\"fire\", 0])  # number of items in a feature vector\n",
+    "nitems = len(myds)  # number of sounds in the dataset\n",
+    "naudio = dataset.naudio  # number of audio files in each class\n",
+    "nclass = dataset.nclass  # number of classes\n",
+    "nlearn = round(naudio * train_pct)  # number of sounds among naudio for training\n",
+    "class_ids_aug = np.repeat(classnames, naudio * data_aug_factor)\n",
+    "\n",
+    "if LOAD_XY:\n",
+    "    X = np.load(fm_dir+\"feature_matrix_2D.npy\")\n",
+    "    y = np.load(fm_dir+\"labels.npy\")\n",
+    "else:\n",
+    "    X = np.zeros((data_aug_factor * nclass * naudio, featveclen))\n",
+    "    y = np.empty((data_aug_factor * nclass * naudio), dtype='U10')\n",
+    "    for s in range(data_aug_factor):\n",
+    "        for class_idx, classname in enumerate(classnames):\n",
+    "            for idx in range(naudio):\n",
+    "                featvec = myds[classname, idx]\n",
+    "                X[s * nclass * naudio + class_idx * naudio + idx, :] = featvec\n",
+    "                y[s * nclass * naudio + class_idx * naudio + idx] = classname\n",
+    "\n",
+    "    np.save(fm_dir + \"feature_matrix_2D.npy\", X)\n",
+    "    np.save(fm_dir + \"labels.npy\", y)\n",
+    "\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, stratify=y)\n",
+    "print(f\"Shape of the training matrix : {X_train.shape}\")\n",
+    "print(f\"Number of training labels : {len(y_train)}\")\n",
     "\n",
     "# [2] (optional) Data normalization\n",
+    "X_train = X_train / np.linalg.norm(X_train, axis=1, keepdims=True)\n",
+    "X_test = X_test / np.linalg.norm(X_test, axis=1, keepdims=True)\n",
     "\n",
     "# [3] (optional) dimensionality reduction.\n",
-    "...\n",
     "\n",
     "# [4] Model training and selection.\n",
-    "model = ...\n",
-    "...\n",
+    "if LOAD_MODEL:\n",
+    "    model: GaussianProcessClassifier = pickle.load(open(model_dir + model_filename, \"rb\"))\n",
+    "else:\n",
+    "    model = GaussianProcessClassifier(1.0 * RBF(1.0))\n",
+    "    # model = MLPClassifier(alpha=1, max_iter=1000)\n",
     "\n",
-    "# [5] Save the trained model, eventually the pca.\n",
-    "filename = \"model.pickle\"\n",
-    "pickle.dump(model, open(model_dir + filename, \"wb\"))\n",
+    "    model.fit(X_train, y_train)\n",
     "\n",
-    "# [6] Evaluate the model."
+    "# [5] Evaluate the model.\n",
+    "predictions = model.predict(X_test)\n",
+    "model_accuracy = accuracy(predictions, y_test)\n",
+    "print(f\"{model_accuracy*100:.1f}%\")\n",
+    "\n",
+    "show_confusion_matrix(predictions, y_test, classnames)\n",
+    "print(f\"Real:\\t\\t{str(y_test[0])}\\nPredicted:\\t{model.predict((X_test[0],))[0]}\")\n",
+    "print(repr(X_test[0]))\n",
+    "\n",
+    "# [6] Save the trained model, eventually the pca.\n",
+    "if not LOAD_MODEL:\n",
+    "    pickle.dump(model, open(model_dir + model_filename, \"wb\"))"
    ]
   },
   {
@@ -887,7 +959,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -902,11 +974,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.18"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "46df200377d403be22c796785365123e6a374b5da08e8292e6b2afda659c5a28"
-   }
   }
  },
  "nbformat": 4,
