add hyperparam test

--- a/classification/h5a2_audio.ipynb
+++ b/classification/h5a2_audio.ipynb
@@ -328,6 +328,7 @@
     "accuracy_lda = np.zeros((n_splits,))\n",
     "for k, idx in enumerate(kf.split(X_train, y_train)):\n",
     "    (idx_learn, idx_val) = idx\n",
+    "\n",
     "    model_knn.fit(X_train[idx_learn], y_train[idx_learn])\n",
     "    prediction_knn = model_knn.predict(X_train[idx_val])\n",
     "    accuracy_knn[k] = accuracy(prediction_knn, y_train[idx_val])\n",
@@ -853,7 +854,7 @@
     "import pickle\n",
     "from sklearn.gaussian_process import GaussianProcessClassifier\n",
     "from sklearn.gaussian_process.kernels import RBF\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import StratifiedKFold, train_test_split\n",
     "\n",
     "from classification.datasets import Dataset\n",
     "from classification.utils.audio_student import Feature_vector_DS\n",
@@ -861,8 +862,9 @@
     "from classification.utils.utils import accuracy\n",
     "\n",
     "\n",
-    "LOAD_XY = True\n",
-    "LOAD_MODEL = True\n",
+    "LOAD_XY = False\n",
+    "LOAD_MODEL = False\n",
+    "TEST_HYPERPARAM = False\n",
     "\n",
     "\n",
     "fm_dir = \"data/feature_matrices/\"  # where to save the features matrices\n",
@@ -876,7 +878,7 @@
     "myds = Feature_vector_DS(dataset, Nft=512, nmel=20, duration=950, shift_pct=0.0)\n",
     "myds.data_aug = [\"add_bg\", \"echo\", \"noise\", \"scaling\"]\n",
     "\n",
-    "data_aug_factor = 10\n",
+    "data_aug_factor = 1\n",
     "train_pct = 0.7\n",
     "featveclen = len(myds[\"fire\", 0])  # number of items in a feature vector\n",
     "nitems = len(myds)  # number of sounds in the dataset\n",
@@ -919,20 +921,42 @@
     "    model = GaussianProcessClassifier(1.0 * RBF(1.0))\n",
     "    # model = MLPClassifier(alpha=1, max_iter=1000)\n",
     "\n",
+    "# TO RUN\n",
+    "if TEST_HYPERPARAM:\n",
+    "    print(f\"hyperparam\\taccuracy\\taccuracy std dev\")\n",
+    "\n",
+    "    for hyperparam in np.linspace(0.7, 5, 10):\n",
+    "        n_splits = 5\n",
+    "        kf = StratifiedKFold(n_splits=n_splits, shuffle=True)\n",
+    "\n",
+    "        model = GaussianProcessClassifier(hyperparam * RBF(hyperparam))\n",
+    "\n",
+    "        model.fit(X_train, y_train)\n",
+    "\n",
+    "        model_accuracy = np.zeros((n_splits,))\n",
+    "        for k, idx in enumerate(kf.split(X_train, y_train)):\n",
+    "            (idx_learn, idx_val) = idx\n",
+    "\n",
+    "            model.fit(X_train[idx_learn], y_train[idx_learn])\n",
+    "            prediction = model.predict(X_train[idx_val])\n",
+    "            model_accuracy[k] = accuracy(prediction, y_train[idx_val])\n",
+    "\n",
+    "        print(f\"{hyperparam}\\t\\t{model_accuracy.mean():.3f}\\t\\t{model_accuracy.std():.2f}\")\n",
+    "else:\n",
     "    model.fit(X_train, y_train)\n",
     "\n",
-    "# [5] Evaluate the model.\n",
-    "predictions = model.predict(X_test)\n",
-    "model_accuracy = accuracy(predictions, y_test)\n",
-    "print(f\"{model_accuracy*100:.1f}%\")\n",
+    "    # [5] Evaluate the model.\n",
+    "    predictions = model.predict(X_test)\n",
+    "    model_accuracy = accuracy(predictions, y_test)\n",
+    "    print(f\"{model_accuracy*100:.1f}%\")\n",
     "\n",
-    "show_confusion_matrix(predictions, y_test, classnames)\n",
-    "print(f\"Real:\\t\\t{str(y_test[0])}\\nPredicted:\\t{model.predict((X_test[0],))[0]}\")\n",
-    "print(repr(X_test[0]))\n",
+    "    show_confusion_matrix(predictions, y_test, classnames)\n",
+    "    print(f\"Real:\\t\\t{str(y_test[0])}\\nPredicted:\\t{model.predict((X_test[0],))[0]}\")\n",
+    "    print(repr(X_test[0]))\n",
     "\n",
-    "# [6] Save the trained model, eventually the pca.\n",
-    "if not LOAD_MODEL:\n",
-    "    pickle.dump(model, open(model_dir + model_filename, \"wb\"))"
+    "    # [6] Save the trained model, eventually the pca.\n",
+    "    if not LOAD_MODEL:\n",
+    "        pickle.dump(model, open(model_dir + model_filename, \"wb\"))"
    ]
   },
   {
