--- a/classification/h5a3_confidence_and_memory.ipynb
+++ b/classification/h5a3_confidence_and_memory.ipynb
@@ -6,11 +6,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### TO RUN\n",
+    "# TO RUN\n",
     "import os\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "import pickle\n",
     "\n",
     "\"Machine learning tools\"\n",
     "\n",
@@ -94,7 +95,7 @@
    "outputs": [],
    "source": [
     "### TO COMPLETE - Uncomment the following line\n",
-    "# model_knn = pickle.load(open(..., 'rb')) # Write your path to the model here!\n",
+    "model_knn = pickle.load(open(\"../mcu/hands_on_feature_vectors/model.pickle\", 'rb')) # Write your path to the model here!\n",
     "normalize = True\n",
     "pca = None\n",
     "\n",
@@ -176,7 +177,7 @@
    "outputs": [],
    "source": [
     "### TO RUN\n",
-    "num = 0  # 0 (default), 1, ..., 39\n",
+    "num = 11  # 0 (default), 1, ..., 39\n",
     "\n",
     "sound = dataset[\"birds\", num]\n",
     "audio = AudioUtil.open(sound)\n",
@@ -194,7 +195,7 @@
     "    sgram = sgram[:, :ncol]\n",
     "    fv = sgram.reshape(-1)\n",
     "\n",
-    "    ### TO COMPLETE - Eventually normalize and reduce feature vector dimensionality\n",
+    "    fv = fv / np.linalg.norm(fv)\n",
     "\n",
     "    probs[window, :] = model_knn.predict_proba([fv])[0]\n",
     "\n",
@@ -269,7 +270,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -284,11 +285,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.18"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "46df200377d403be22c796785365123e6a374b5da08e8292e6b2afda659c5a28"
-   }
   }
  },
  "nbformat": 4,
